fix pre-wrap

--- a/sass/wyrm_addons/pygments/_pygments.sass
+++ b/sass/wyrm_addons/pygments/_pygments.sass
@@ -41,7 +41,7 @@ div[class^='highlight'] td.code
   line-height: 1.5
   color: $text-lighter
 div[class^='highlight'] pre
-  white-space: pre
+  white-space: pre-wrap
   margin: 0
   padding: $base-line-height / 2 $base-line-height / 2
   font-family: $code-font-family
